# lerka_bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py  settings.py
src/common/: keyboard.py  states.py
src/routes/: main.py
src/schemas/: bgu.py  istu.py  isu.py
src/services/: base.py  bgu.py  istu.py  isu.py
src/utils/: messages.py  snils.py
