
[project]
name = "lerka_bot"
version = "0.1.0"
description = "Бот для мониторинга поступления Леры в телеграм!"
authors = [
    {name = "Ilya Kuchmenko", email = "42113015+ilyahahaha@users.noreply.github.com"},
]
dependencies = [
    "aiogram>=3.0.0b7",
    "playwright>=1.35.0",
    "pydantic[dotenv]>=1.10.11",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
format = [
    "black>=23.3.0",
]
lint = [
    "ruff>=0.0.277",
]
build = [
    "setuptools>=68.0.0",
]
