
[project]
name = "lerka_bot"
version = "0.1.0"
description = "Бот для мониторинга поступления Леры в телеграм!"
authors = [
    {name = "Ilya Kuchmenko", email = "42113015+ilyahahaha@users.noreply.github.com"},
]
dependencies = [
    "aiogram>=3.0.0b7",
    "pydantic[dotenv]>=1.10.11",
    "orjson>=3.9.1",
    "aiohttp>=3.8.4",
    "aiohttp-client-cache>=0.8.1",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "setuptools>=68.0.0"
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
start = {cmd = "python src/main.py"}

[tool.pdm.dev-dependencies]
format = [
    "black>=23.3.0",
]
lint = [
    "ruff>=0.0.277",
]